--- a/qork/pyproject.toml
+++ b/qork/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "qork"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
-  { name="Zay Sola", email="zaysola.dev@gmail.com" },
+  { name="Zubin Aysola", email="zubinpersonalemail@email.com" },
 ]
 description = "A simple CLI for interacting with OpenAI models."
 readme = "README.md"
